--- a/.gitignore
+++ b/.gitignore
@@ -6995,3 +6995,97 @@ Temp/UnityTempFile-c2b42081f66ab3a4f925a82223c6262c
 Temp/UnityTempFile-d5313d51cdeb0cf4d883f5737ec004a4
 Temp/UnityTempFile-f144fedca50f4234b8a62af9b9a08e41
 Temp/UnityTempFile-f8aa42d1923003440a88ed79038d11f4
+Temp/ProcessJobs/fa5a3bb2cac1e508409bb2644086fdf3.vis
+Temp/ProcessJobs/fa5a3bb2cac1e508409bb2644086fdf3.lt
+Temp/ProcessJobs/f8d4901b08b5b4e1e8fdb96f7897fecc.clust
+Temp/ProcessJobs/f4da9fc0cd1765f992adadfdf21dfc2e.vis
+Temp/ProcessJobs/f4da9fc0cd1765f992adadfdf21dfc2e.lt
+Temp/ProcessJobs/f2b9d2e76755affb0425c24f1ed317a3.vis
+Temp/ProcessJobs/f2b9d2e76755affb0425c24f1ed317a3.lt
+Temp/ProcessJobs/eeb540f3685d21441479557e379876a8.clust
+Temp/ProcessJobs/ecf6174948ff697b841687aa51e9fe99.clust
+Temp/ProcessJobs/eb1fb7c169d5a0267f64b1419bcc52c0.clust
+Temp/ProcessJobs/e9a6970f79cd12d8b075e7d72f1b07cb.bakert
+Temp/ProcessJobs/e7ebcc185a116df2a6d4e2c360ff9043.clust
+Temp/ProcessJobs/dd1e97c4c37cfdf45a548a67b3ade324.vis
+Temp/ProcessJobs/dd1e97c4c37cfdf45a548a67b3ade324.lt
+Temp/ProcessJobs/dc40405ca96c00dac38180854bc4715d.vis
+Temp/ProcessJobs/dc40405ca96c00dac38180854bc4715d.lt
+Temp/ProcessJobs/cc3ce0adc8c7c12cbdce29d68dfb4fb5.vis
+Temp/ProcessJobs/cc3ce0adc8c7c12cbdce29d68dfb4fb5.lt
+Temp/ProcessJobs/b69cf76a9f88e327ff86b42a09b5ad45.clust
+Temp/ProcessJobs/b2cefc6ce04034833ee44054dbcc1a30.clust
+Temp/ProcessJobs/b2105d1b14c70766983fc7d562dea3ea.clust
+Temp/ProcessJobs/b1d615f5280f3f4e9a0b36096f8b59fa.vis
+Temp/ProcessJobs/b1d615f5280f3f4e9a0b36096f8b59fa.lt
+Temp/ProcessJobs/a0fd1f78fffcf8b0de6ed60f475b4348.clust
+Temp/ProcessJobs/9ee9971891b464dd6667721eaea4614b.vis
+Temp/ProcessJobs/9ee9971891b464dd6667721eaea4614b.lt
+Temp/ProcessJobs/97aa940cef55da57eed616bb134b6a37.clust
+Temp/ProcessJobs/9158ae6bd17131bacc8593953bacae1e.vis
+Temp/ProcessJobs/9158ae6bd17131bacc8593953bacae1e.lt
+Temp/ProcessJobs/90c5a4fff366d91f6aa0354c10d6d064.clust
+Temp/ProcessJobs/8a55072f80c8b6b1df1feefe94adbbec.clust
+Temp/ProcessJobs/86c323b903dd1baf48cdd97e7051513b.clust
+Temp/ProcessJobs/81ddec55ecf53946b9c6b14f4811ab2c.clust
+Temp/ProcessJobs/7d95a88751ac7afa14f7a193b330b0e0.vis
+Temp/ProcessJobs/7d95a88751ac7afa14f7a193b330b0e0.lt
+Temp/ProcessJobs/77d38792bc4bac09979fd3a888c6400d.vis
+Temp/ProcessJobs/77d38792bc4bac09979fd3a888c6400d.lt
+Temp/ProcessJobs/73b816e96f3e1d8e56af2f2a59d95d4e.clust
+Temp/ProcessJobs/70ef6edf1137b861f6516b1047b7d05c.vis
+Temp/ProcessJobs/70ef6edf1137b861f6516b1047b7d05c.lt
+Temp/ProcessJobs/6b160869eeb10b02f85902eeb413da41.vis
+Temp/ProcessJobs/6b160869eeb10b02f85902eeb413da41.lt
+Temp/ProcessJobs/6951106b793cf965083585bded6e5f08.vis
+Temp/ProcessJobs/6951106b793cf965083585bded6e5f08.lt
+Temp/ProcessJobs/66e61f28b2d491191d9bf2e3fcda21ed.clust
+Temp/ProcessJobs/667306497135b122ef80b4445637f813.clust
+Temp/ProcessJobs/5ea658ec3f84cf46b88c5638b77ac9e5.vis
+Temp/ProcessJobs/5ea658ec3f84cf46b88c5638b77ac9e5.lt
+Temp/ProcessJobs/55fcf4f4e8900d26ebca115f6e0e0173.vis
+Temp/ProcessJobs/55fcf4f4e8900d26ebca115f6e0e0173.lt
+Temp/ProcessJobs/54ce7e894f92e5558f418daf03e679d7.vis
+Temp/ProcessJobs/54ce7e894f92e5558f418daf03e679d7.lt
+Temp/ProcessJobs/429db3b22a91bcc10076bb2397f149ad.clust
+Temp/ProcessJobs/41444c7791800aa14ca360761d4c299e.clust
+Temp/ProcessJobs/3d2ad8a9f80ad096f7bafa6da8732087.vis
+Temp/ProcessJobs/3d2ad8a9f80ad096f7bafa6da8732087.lt
+Temp/ProcessJobs/3990ea0105560034bb7a5b3fac228e79.vis
+Temp/ProcessJobs/3990ea0105560034bb7a5b3fac228e79.lt
+Temp/ProcessJobs/350c96980b6736d7554d4d09adde24f0.clust
+Temp/ProcessJobs/286de80bfecb1d735d2060b0f96f6817.vis
+Temp/ProcessJobs/286de80bfecb1d735d2060b0f96f6817.lt
+Temp/ProcessJobs/27fe0b4a91cabbf2e9d7d588eaf92b26.vis
+Temp/ProcessJobs/27fe0b4a91cabbf2e9d7d588eaf92b26.lt
+Temp/ProcessJobs/1f87e5d177707da095184050a1dda3b6.vis
+Temp/ProcessJobs/1f87e5d177707da095184050a1dda3b6.lt
+Temp/ProcessJobs/1c5823210069fe044bf283b2c8f0e219.clust
+Temp/ProcessJobs/1bd7f1e5d3e6a70ab69de068d321f904.vis
+Temp/ProcessJobs/1bd7f1e5d3e6a70ab69de068d321f904.lt
+Temp/ProcessJobs/0e07a631046aeaf6cbf6aee400f6a855.clust
+Temp/ProcessJobs/05ec529f4992ea41e753906ed38b2641.clust
+Library/shadercompiler-UnityShaderCompiler.exe7.log
+Library/shadercompiler-UnityShaderCompiler.exe6.log
+Library/shadercompiler-UnityShaderCompiler.exe5.log
+Library/shadercompiler-UnityShaderCompiler.exe4.log
+Library/ShaderCache/e/e450887676023ad62cac20b58771197d.bin
+Library/ShaderCache/e/e40fff02dcadf4e99f43dfdf0633373c.bin
+Library/ShaderCache/e/e38944e1073a80a732f11770b5b29e99.bin
+Library/ShaderCache/d/dfbce856c6316c4c40a995e220b2ef12.bin
+Library/ShaderCache/d/dbaa6c20025ee8c8565800cc184d4995.bin
+Library/ShaderCache/d/d5ceec910b9815c010a5bd8c56313bac.bin
+Library/ShaderCache/c/c8f1a97d83337647b0343c1806684c12.bin
+Library/ShaderCache/8/8fe3be522b6dda60a5a3de4a6fefa974.bin
+Library/ShaderCache/8/894fdb2eed2ce1508da400888545d91e.bin
+Library/ShaderCache/8/865f8092b369d57850694a4f217b9f09.bin
+Library/ShaderCache/8/8071fc1d86843fa996b7a54094a3e614.bin
+Library/ShaderCache/8/804efc8df29a57def6774dcc6259be0b.bin
+Library/ShaderCache/7/7a4089c2ad60b5503fe37aba0aef2d18.bin
+Library/ShaderCache/7/7885845d82f9675c88cdcaca3509d48b.bin
+Library/ShaderCache/6/612bb7818f791aebf91b5b7294ce196e.bin
+Library/ShaderCache/5/56a6995e36851d79635d36ecdda16f09.bin
+Library/ShaderCache/3/38b9897a22a008cb19427e7fde1c2838.bin
+Library/ShaderCache/1/1be06903a5d3b596789032e7a76f6337.bin
+Library/ShaderCache/1/1bbd20747902533aa080c3f3926a5cc0.bin
+Library/ShaderCache/1/17d3769898f379addc2b3ca7a0dd731f.bin
