--- a/.gitignore
+++ b/.gitignore
@@ -7089,3 +7089,8 @@ Library/ShaderCache/3/38b9897a22a008cb19427e7fde1c2838.bin
 Library/ShaderCache/1/1be06903a5d3b596789032e7a76f6337.bin
 Library/ShaderCache/1/1bbd20747902533aa080c3f3926a5cc0.bin
 Library/ShaderCache/1/17d3769898f379addc2b3ca7a0dd731f.bin
+Library/EditorSnapSettings.asset
+Library/expandedItems
+Library/LastSceneManagerSetup.txt
+Library/StateCache/Hierarchy/e4e487-mainStage.json
+Library/StateCache/SceneView/1f7162-mainStage.json
