--- a/.gitignore
+++ b/.gitignore
@@ -7095,3 +7095,174 @@ Library/LastSceneManagerSetup.txt
 Library/StateCache/Hierarchy/e4e487-mainStage.json
 Library/StateCache/SceneView/1f7162-mainStage.json
 *.lt
+Library/Artifacts/e9/e94065961021a1fe2fb0cc5707a70e98
+Library/StateCache/SceneView/5e3029-mainStage.json
+Temp/ProcessJobs/e6f473345afe8e8569b16f5ff4b1a969.clust
+Temp/ProcessJobs/dde5f108f1ea8369a3ac9c29cfa423f8.clust
+Temp/ProcessJobs/d6ca1b0e9bbcf062cabaf9f4df3623e7.vis
+Temp/ProcessJobs/9824edc8ed1490e5dfd9daf18efdc9a0.vis
+Temp/ProcessJobs/8b9762f5d0af2a8ccd961282805fa3a7.vis
+Temp/ProcessJobs/868d10c17a67081d9e6b53ef1a818ed6.vis
+Temp/ProcessJobs/7f7325e3484a98a0255496542c364aec.vis
+Temp/ProcessJobs/747b74d6463213e1a67f34284c8144bd.vis
+Temp/ProcessJobs/6ae8072a6aabe33042e7fa2dca66b1a3.clust
+Temp/ProcessJobs/46368577910516f063ee669e5ab85428.clust
+Temp/ProcessJobs/17ea0e4b81409d0f8167c6037702064a.vis
+Temp/ProcessJobs/10455f313f112873057af5d893ee1876.clust
+Temp/ProcessJobs/101767e12e246b5a3b5125f385fbc9bf.clust
+Temp/ProcessJobs/07e4dc3caef9f4e0163330d0462df1c9.clust
+Temp/ProcessJobs/04521b94ece70150a1195f1cb2ca4200.clust
+Temp/ProcessJobs/01d3039ce2ade3578992f5ef805058d4.vis
+Library/StateCache/Hierarchy/2d4c3f-mainStage.json
+Library/ShaderCache/f/fbcb62055ae2866902e52b1063bcf0a8.bin
+Library/ShaderCache/f/faafa9f840521011d5912d0f020caa56.bin
+Library/ShaderCache/f/f9e4a8f44118630e9da43447a5e2bd38.bin
+Library/ShaderCache/f/f156831fc78df9b70980614fe558a0b7.bin
+Library/ShaderCache/f/f0b085eb3cbb6653291036258ba8d997.bin
+Library/ShaderCache/e/eabde4205b4f0d395295de386efa759b.bin
+Library/ShaderCache/e/e96cf2455eb884a3679c1701acd5aa24.bin
+Library/ShaderCache/e/e6c9635d88886ea055a53dccad721fba.bin
+Library/ShaderCache/d/df5c956cb4a5caa92028f54fed043df0.bin
+Library/ShaderCache/d/dea2002cf8bd64bf29fa1078466db3b5.bin
+Library/ShaderCache/d/d89cba94885996812a7f218586e0f4ed.bin
+Library/ShaderCache/d/d764b78cd9a6d7450fb18efc9eb026d9.bin
+Library/ShaderCache/d/d6cf017ed92987eabaee483779bf589b.bin
+Library/ShaderCache/d/d5684872d0a38b4da802a9a3e9c9c166.bin
+Library/ShaderCache/d/d51715a36350872710a9952d280ab396.bin
+Library/ShaderCache/d/d3a011eee7ab70400ea45cf1d47a4730.bin
+Library/ShaderCache/d/d346c6812a561af5b2b5ba245548f023.bin
+Library/ShaderCache/c/c99a9c71965187b0154fe615f59f4990.bin
+Library/ShaderCache/c/c7346627d0e795eb1c23fac838177696.bin
+Library/ShaderCache/c/c1f359964b7da07b8bca431bcf0a39cf.bin
+Library/ShaderCache/c/c01d3a308937eb1995e41acecbedae91.bin
+Library/ShaderCache/b/b61b703d9755a966c1d8c8fd325ed71d.bin
+Library/ShaderCache/b/b32ccdcc7b9aa9fa601e70075247a595.bin
+Library/ShaderCache/a/a8b1adc8e8f416a3dbfa2930f3f336a5.bin
+Library/ShaderCache/a/a355707b5304f1146d58c773630a9e62.bin
+Library/ShaderCache/a/a28ac127f64e8e89a022ef948251f6ce.bin
+Library/ShaderCache/9/9e26775f1bb2e3f3e5e723b6f3ec2478.bin
+Library/ShaderCache/9/986929a62e1d6ed2b9587692bce5ebd2.bin
+Library/ShaderCache/9/90584ed4487f12afba083bae5b55075e.bin
+Library/ShaderCache/8/8b7a75e24faf451bca439b419c644d41.bin
+Library/ShaderCache/8/84fcd9e2129a9c4647916c862d61e8aa.bin
+Library/ShaderCache/8/83d6fd3c1d03b0725458c2f364b18e06.bin
+Library/ShaderCache/8/83a6444b25b15c5d38a30842c542da4c.bin
+Library/ShaderCache/7/7d7cedcec0f9abb336ae2131db903990.bin
+Library/ShaderCache/7/7a67906f278d8683e6f55b93f0ad0b2a.bin
+Library/ShaderCache/7/71e7e312967a61a029e57a33f42048dd.bin
+Library/ShaderCache/7/71a8349dfcbe31e24a136e4a0a21666e.bin
+Library/ShaderCache/5/5fb3c0a511bd7e8b06ea016e85702b3c.bin
+Library/ShaderCache/5/5c585d2319d531702c68fbfede417cde.bin
+Library/ShaderCache/5/54f0f799300af966baeba56851974057.bin
+Library/ShaderCache/5/54819b2b459bb2b1c0528ebed9065e53.bin
+Library/ShaderCache/5/52f2f23e730978b410a7f1431be72500.bin
+Library/ShaderCache/5/5088611843e139449adf7c519e22112c.bin
+Library/ShaderCache/4/4cf82c1bc41d0077f754632e83dcd1b9.bin
+Library/ShaderCache/4/4ad65cf901cea8a8942b8e414703e1f9.bin
+Library/ShaderCache/4/415b0267c3631771a5d0f91b0519d06a.bin
+Library/ShaderCache/3/3d7c8306403c5e37d94e92f4b7f72ca2.bin
+Library/ShaderCache/3/3b27e5b909a34f2c298eaddd01d57376.bin
+Library/ShaderCache/3/34c4fcef361639749cdf03e7e74e74b8.bin
+Library/ShaderCache/2/292222762f1b24d61e5559f62cbc6f62.bin
+Library/ShaderCache/2/24c015ed4c7736bdc3f0b2b2a03802fb.bin
+Library/ShaderCache/2/21af5abf782b33bae9d347933574873a.bin
+Library/ShaderCache/1/190397ecdb2f4ac0cbc452c48d36123f.bin
+Library/ShaderCache/0/0e22af6950ef5555d5b3b9475143d694.bin
+Library/ShaderCache/0/0658f81de4cdfda451cd495b8e5a07c0.bin
+Library/ShaderCache/0/0479fe2b491f6ca8f8297ef59d3ef1ec.bin
+Library/Artifacts/ff/ff7e90ba440ccc49595fc1bdcd02a43d
+Library/Artifacts/ff/ff5af6234f82498278f7acaafc086175
+Library/Artifacts/ff/ff43c1e25b197ab0cab4649dcd1109f3
+Library/Artifacts/fd/fd9d65d076c96773ad8ad01ebb437202
+Library/Artifacts/fc/fc23ecf6f66462ee93cf34a73c29281a
+Library/Artifacts/fa/faf886eb593ec1d424d001994af299ed
+Library/Artifacts/f8/f84f910a79b7b33b5c4f8c3429bda770
+Library/Artifacts/f6/f64f3bdb89c249326951922940e74fad
+Library/Artifacts/f5/f5ec82fbf4cac95cbfba40fe857a7a68
+Library/Artifacts/eb/eb9281ca60ddc3541ae806b38a6fc5f7
+Library/Artifacts/e5/e53849e7d30b17165ccfc093b8589ac6
+Library/Artifacts/e3/e3af9b8f61c73eea675b5ad09f25dcf8
+Library/Artifacts/e3/e3242102f3f411b949e637d11390af0d
+Library/Artifacts/e0/e0e4f9f094187779c958b964fc423cf2
+Library/Artifacts/e0/e055fb863092e9e7c9dbc35554fa12f7
+Library/Artifacts/de/defba8031337b01d3b611b56c9030626
+Library/Artifacts/d7/d7445fd9549c83b6f944bd1bc7feb714
+Library/Artifacts/d5/d5dab169a34519085458d3491b6e5e00
+Library/Artifacts/d4/d4cc36f1ee8246c2d1f522ef0fec2493
+Library/Artifacts/d3/d3fc7095b2b0bb6373b58f310cc6838c
+Library/Artifacts/cb/cba5fccc631d59a32e3a0c564fd1a987
+Library/Artifacts/c5/c5f65f91611bbd45a01d0a5e979d980e
+Library/Artifacts/c3/c31c973c5d8ac9865d110a83db0075ce
+Library/Artifacts/c1/c1afed368873227fcf383624057a9419
+Library/Artifacts/c1/c184fd1e35315c1c620a9986120ebc35
+Library/Artifacts/bd/bdeeb53fd56d8c529a3b8b0af95b28f4
+Library/Artifacts/b9/b9816e7cc706b22b037692a14e0c6dde
+Library/Artifacts/b7/b7376e3308b45fb6e76162335a17365f
+Library/Artifacts/b4/b4cd50f4b8ab531bfe398daba823f252
+Library/Artifacts/b2/b2e543d5030237c36f8ca6c1d97c2ea0
+Library/Artifacts/af/afbf3ec921cedca22951534c3311cca2
+Library/Artifacts/a9/a9f0aa110edb3505df9e1b0739babee5
+Library/Artifacts/a6/a6aa10c34658334e4cc2286b3584123e
+Library/Artifacts/a3/a36a69f405163100b40b6271ac7edd3c
+Library/Artifacts/97/97eb1500f7e9360fb85e3e24581d526c
+Library/Artifacts/96/9618756bd93d004de6858179668b485e
+Library/Artifacts/95/955e55fee386a23099de80fb86573812
+Library/Artifacts/95/9504f5b29354f89ea241fc224b760662
+Library/Artifacts/94/943940df7ea6acdad740b6cae23abd98
+Library/Artifacts/92/927d81aed0e9ff9f97bf2828ab72764a
+Library/Artifacts/90/90eb88cb359d96ace2df73281e820b39
+Library/Artifacts/90/90e34353a000d34ebcacb9d4a1cffeb3
+Library/Artifacts/8b/8b140eba7a3fe4c8c569b256352bf2f0
+Library/Artifacts/89/89c5a3f7845acd6d59ad48deaf96d7fb
+Library/Artifacts/89/8936d0033bcd909a0e71594e216f8511
+Library/Artifacts/87/8709305b270c399c724246fe78253a76
+Library/Artifacts/83/831659cf74451ac222e0b3f7c9a362d0
+Library/Artifacts/80/805dd82fc6cf6037ca2225ad32af620b
+Library/Artifacts/7f/7f7a5b695373deabf86cc9bcd4b641ae
+Library/Artifacts/74/74ebd233abfa066788860de905a9eb6e
+Library/Artifacts/74/74b0c5605960e2e09a9805e875b8329a
+Library/Artifacts/73/73eb5ee2d68d7a7719ba829e9a85f929
+Library/Artifacts/73/7352e0aa84f712066fc26bcfcf30ee85
+Library/Artifacts/71/7116c7356e4104e034dc8e878832c6de
+Library/Artifacts/6e/6e9b8c8eea4be1c2a7d80213fd9adf1e
+Library/Artifacts/6b/6b4cfe46f01f16111ff5f9e4544fabdf
+Library/Artifacts/69/69629b6161a53e5b0c2b7a91dad3fb0f
+Library/Artifacts/68/68a2847de7493246b637703aa4df3b6f
+Library/Artifacts/64/645ef72da54ac162a22f87b24c109424
+Library/Artifacts/5f/5f9d7bfdbfed3751a859ed948c307d6f
+Library/Artifacts/5c/5c3de296b783825217529ec7f573c705
+Library/Artifacts/5c/5c07c1e6aeedff97de021b2a8c2e1f8e
+Library/Artifacts/5a/5ae356e460fd2282aea8a91e37410723
+Library/Artifacts/5a/5ad671558854c2d93b60271ea64cb82c
+Library/Artifacts/59/59a167d2a6fac9d37f7c614370b7a76f
+Library/Artifacts/58/5839568d5326b05158ec6230eda286d7
+Library/Artifacts/57/5703d904b5bc97f88fd3cd2d7e387b73
+Library/Artifacts/4e/4e1d4a428a1fb2e29b95551077095e71
+Library/Artifacts/4a/4a55be5d9c59ce342cc5e561bf175f35
+Library/Artifacts/45/454e76b08ac062afa2632a692dc09bd5
+Library/Artifacts/44/4429e5c45b833f0afda1daedfad232b3
+Library/Artifacts/44/4409633089dff8b804c90701a10b895f
+Library/Artifacts/41/41edb82210c3b2ef068b73b6ff2b2346
+Library/Artifacts/41/41418d543a5b411a7704649725d66787
+Library/Artifacts/40/40431f9e9c8754637c18b6b7f754d6bb
+Library/Artifacts/30/30448e92dd8b22570e5b89ff45220494
+Library/Artifacts/2c/2ce250f85269a6c2a0468bfeb8769a1a
+Library/Artifacts/28/2887eb54f2ad9346e6922f6522d02c8e
+Library/Artifacts/21/2117c18dbfb590b898ac436b7330af82
+Library/Artifacts/1e/1ee7004b7a43166f10b518a99eaec84d
+Library/Artifacts/1a/1a65648926f9256ece72c9de7ed8c40f
+Library/Artifacts/1a/1a1b3f95ed0cac15839079c8d8ca4271
+Library/Artifacts/18/18a00dfac59c9e718c96e5d87deb6b6a
+Library/Artifacts/16/168d20ada4742069ede5de9125e6f7d8
+Library/Artifacts/13/13fe6eff67cb423849b8c938a8d1c63c
+Library/Artifacts/13/13a906509d730e1382099bdbcb9cf06b
+Library/Artifacts/0f/0f04d57187d65ffb741cde1a40c6abdd
+Library/Artifacts/0a/0a7c539077dbfbc43c2819b2934742eb
+Library/Artifacts/07/07ccd2ce6f403f4dc7a21c976d1058e8
+Library/Artifacts/06/0695f1864f0a0c48c607d20338d00618
+Library/Artifacts/04/04ed6e9ba521e20714675e9610e19e8b
+Library/Artifacts/03/037fb4d6751d47a2c875ccee094c3d36
+Library/Artifacts/01/01c27d4abaaace1f9498a6d8264621c9
+Library/Artifacts/01/0178ab0bf97cf59549ccf350645b757a
+Library/Artifacts/01/0100e091e072f1eab42602bf8734b0a5
+Library/Artifacts/00/00db7db70d7ea615837f99afbcc92037
