添加忽略文件

--- a/.gitignore
+++ b/.gitignore
@@ -54776,3 +54776,56 @@ UnityEngine.XR.LegacyInputHelpers.csproj
 VRForPowerDistribution.csproj
 VRForPowerDistribution.Editor.csproj
 VRForPowerDistribution.sln
+Library/Artifacts/24/2481d539a2e5334745dd648de0fb723e
+Library/Artifacts/37/37fd90f0ec0bf7d0a844aa6496cfe444
+Library/Artifacts/8c/8c02a19b1ecb7b5f7a7a149c46d67a7b
+Library/Artifacts/d6/d64bf9e3c892d789877701b4c275a244
+Library/CrashedAssetImports.txt
+Library/ShaderCache/c/c90aacb440a81bfc9bc6febecb59ffea.bin
+Library/ShaderCache/d/d0bac4ecf8abc1fa0828beb1185ddbda.bin
+Temp/UnityTempFile-1635eb2b4b630334ca5c2711c76115c5
+Temp/UnityTempFile-53050cc07881dab45a376e86fd50d13b
+Library/Artifacts/24/2481d539a2e5334745dd648de0fb723e
+Library/Artifacts/33/33c1a1a89834a86045c2d0a9bf9f0be5
+Library/Artifacts/37/37fd90f0ec0bf7d0a844aa6496cfe444
+Library/Artifacts/7b/7b2a19bb48a7b01d1972e141b42c42a9
+Library/Artifacts/8c/8c02a19b1ecb7b5f7a7a149c46d67a7b
+Library/Artifacts/d6/d64bf9e3c892d789877701b4c275a244
+Library/ShaderCache/c/c90aacb440a81bfc9bc6febecb59ffea.bin
+Library/ShaderCache/d/d0bac4ecf8abc1fa0828beb1185ddbda.bin
+Temp/ProcessJobs/01d3039ce2ade3578992f5ef805058d4.vis
+Temp/ProcessJobs/04521b94ece70150a1195f1cb2ca4200.clust
+Temp/ProcessJobs/07e4dc3caef9f4e0163330d0462df1c9.clust
+Temp/ProcessJobs/101767e12e246b5a3b5125f385fbc9bf.clust
+Temp/ProcessJobs/10455f313f112873057af5d893ee1876.clust
+Temp/ProcessJobs/17ea0e4b81409d0f8167c6037702064a.vis
+Temp/ProcessJobs/46368577910516f063ee669e5ab85428.clust
+Temp/ProcessJobs/6ae8072a6aabe33042e7fa2dca66b1a3.clust
+Temp/ProcessJobs/747b74d6463213e1a67f34284c8144bd.vis
+Temp/ProcessJobs/7f7325e3484a98a0255496542c364aec.vis
+Temp/ProcessJobs/868d10c17a67081d9e6b53ef1a818ed6.vis
+Temp/ProcessJobs/8b9762f5d0af2a8ccd961282805fa3a7.vis
+Temp/ProcessJobs/9824edc8ed1490e5dfd9daf18efdc9a0.vis
+Temp/ProcessJobs/d6ca1b0e9bbcf062cabaf9f4df3623e7.vis
+Temp/ProcessJobs/dde5f108f1ea8369a3ac9c29cfa423f8.clust
+Temp/ProcessJobs/e6f473345afe8e8569b16f5ff4b1a969.clust
+Temp/UnityTempFile-1635eb2b4b630334ca5c2711c76115c5
+Temp/UnityTempFile-53050cc07881dab45a376e86fd50d13b
+Library/Artifacts/33/33c1a1a89834a86045c2d0a9bf9f0be5
+Library/Artifacts/7b/7b2a19bb48a7b01d1972e141b42c42a9
+Temp/ProcessJobs/01d3039ce2ade3578992f5ef805058d4.vis
+Temp/ProcessJobs/04521b94ece70150a1195f1cb2ca4200.clust
+Temp/ProcessJobs/07e4dc3caef9f4e0163330d0462df1c9.clust
+Temp/ProcessJobs/101767e12e246b5a3b5125f385fbc9bf.clust
+Temp/ProcessJobs/10455f313f112873057af5d893ee1876.clust
+Temp/ProcessJobs/17ea0e4b81409d0f8167c6037702064a.vis
+Temp/ProcessJobs/46368577910516f063ee669e5ab85428.clust
+Temp/ProcessJobs/6ae8072a6aabe33042e7fa2dca66b1a3.clust
+Temp/ProcessJobs/747b74d6463213e1a67f34284c8144bd.vis
+Temp/ProcessJobs/7f7325e3484a98a0255496542c364aec.vis
+Temp/ProcessJobs/868d10c17a67081d9e6b53ef1a818ed6.vis
+Temp/ProcessJobs/8b9762f5d0af2a8ccd961282805fa3a7.vis
+Temp/ProcessJobs/9824edc8ed1490e5dfd9daf18efdc9a0.vis
+Temp/ProcessJobs/d6ca1b0e9bbcf062cabaf9f4df3623e7.vis
+Temp/ProcessJobs/dde5f108f1ea8369a3ac9c29cfa423f8.clust
+Temp/ProcessJobs/e6f473345afe8e8569b16f5ff4b1a969.clust
