添加忽略文件

--- a/.gitignore
+++ b/.gitignore
@@ -54829,3 +54829,27 @@ Temp/ProcessJobs/9824edc8ed1490e5dfd9daf18efdc9a0.vis
 Temp/ProcessJobs/d6ca1b0e9bbcf062cabaf9f4df3623e7.vis
 Temp/ProcessJobs/dde5f108f1ea8369a3ac9c29cfa423f8.clust
 Temp/ProcessJobs/e6f473345afe8e8569b16f5ff4b1a969.clust
+Library/ShaderCache/1/16c723d32894dff9e887bc476c890b70.bin
+Library/ShaderCache/1/17e3b187827fd178d8bf35e6240c1160.bin
+Library/ShaderCache/2/2311d45cbfb1e545a16dab9e769dcc5c.bin
+Library/ShaderCache/2/2f867941c8a6096e1838e553527774cb.bin
+Library/ShaderCache/4/47696415712045e4db1e392eb1d64c97.bin
+Library/ShaderCache/5/529a41fdb1a0a4ad660a0de931e4c1c5.bin
+Library/ShaderCache/6/6777ab7be2d8327a65b76d47384b0ecd.bin
+Library/ShaderCache/e/e2f7741470fb837b223dfa131881e58c.bin
+Library/ShaderCache/e/e2f7741470fb837b223dfa131881e58c.bin
+Library/ShaderCache/6/6777ab7be2d8327a65b76d47384b0ecd.bin
+Library/ShaderCache/5/529a41fdb1a0a4ad660a0de931e4c1c5.bin
+Library/ShaderCache/4/47696415712045e4db1e392eb1d64c97.bin
+Library/ShaderCache/2/2f867941c8a6096e1838e553527774cb.bin
+Library/ShaderCache/2/2311d45cbfb1e545a16dab9e769dcc5c.bin
+Library/ShaderCache/1/17e3b187827fd178d8bf35e6240c1160.bin
+Library/ShaderCache/1/16c723d32894dff9e887bc476c890b70.bin
+Library/ShaderCache/e/e2f7741470fb837b223dfa131881e58c.bin
+Library/ShaderCache/6/6777ab7be2d8327a65b76d47384b0ecd.bin
+Library/ShaderCache/5/529a41fdb1a0a4ad660a0de931e4c1c5.bin
+Library/ShaderCache/4/47696415712045e4db1e392eb1d64c97.bin
+Library/ShaderCache/2/2f867941c8a6096e1838e553527774cb.bin
+Library/ShaderCache/2/2311d45cbfb1e545a16dab9e769dcc5c.bin
+Library/ShaderCache/1/17e3b187827fd178d8bf35e6240c1160.bin
+Library/ShaderCache/1/16c723d32894dff9e887bc476c890b70.bin
